--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           <div class="col-lg-4">
             <!-- <button class="btn">VIEW MORE</button> -->
             <div class="container-button">
-              <button type="button-view-more" class="btn btn-danger">VIEW MORE</button>
+              <button type="button" class="btn btn-danger">VIEW MORE</button>
             </div>
           </div>
         </div>
@@ -231,7 +231,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
               </div>
               <div class="container-button">
-                <button type="button-view-more" class="btn btn-info">read more</button>
+                <button type="button" class="btn btn-info">read more</button>
               </div>
             </div>
           </div>
@@ -248,7 +248,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.
               </div>
               <div class="container-button">
-                <button type="button-view-more" class="btn btn-info">read more</button>
+                <button type="button" class="btn btn-info">read more</button>
               </div>
             </div>
           </div>
@@ -267,7 +267,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
               </div>
               <div class="container-button">
-                <button type="button-view-more" class="btn btn-info">read more</button>
+                <button type="button" class="btn btn-info">read more</button>
               </div>
             </div>
           </div>
