--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
               </div>
               <div class="container-button">
-                <button type="button-view-more" class="btn btn-info">read more</button>
+                <button type="button" class="btn btn-info">read more</button>
               </div>
             </div>
           </div>
