Refresh index.html for slick slider

--- a/index.html
+++ b/index.html
@@ -486,11 +486,11 @@ $(document).ready(function(){
 
 <div class="container">
     <div class="row">
-
-
       <!-- <div class="col-7 col-sm-4 col-md-3 col-xl-2"> -->
       <div class="col-xl-12">
-        <div class="why-choose no-marging-bottom"> Our Happy Clients  <span class="dot-line"></span>  </div>
+        <div class="why-choose no-marging-bottom">
+          Our Happy Clients dddd <span class="dot-line"></span>
+        </div>
         <!-- <hr class="inline"> -->
         <!-- <i class="fa fa-circle"></i> -->
       </div>
@@ -525,7 +525,7 @@ $(document).ready(function(){
 
 
 <!-- ****************** -->
-<!--  Footer section 1  -->
+<!--  Footer section 1  --> 
 <!-- ****************** -->
 
 <div class="container-fluid info-section">
