--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@ $(document).ready(function(){
       <!-- <div class="col-7 col-sm-4 col-md-3 col-xl-2"> -->
       <div class="col-xl-12">
         <div class="why-choose no-marging-bottom">
-          Our Happy Clients dddd <span class="dot-line"></span>
+          Our Happy Clients <span class="dot-line"></span>
         </div>
         <!-- <hr class="inline"> -->
         <!-- <i class="fa fa-circle"></i> -->
